# backlog

./: .backlog.db  .backlog.db-shm  .backlog.yaml  .gitignore  Cargo.toml  README.md
backlog/: Cargo.toml
backlog/src/: builder.rs  error.rs  lib.rs  main.rs
backlog/src/cli/project/: create_project.rs  get_all_projects.rs  get_project.rs  mod.rs  update_project.rs
backlog/src/config/: backlog_config.rs  mod.rs
backlog/src/project/: error.rs  mod.rs  project.rs
backlog/src/repository/: project.rs
backlog/src/storage/: error.rs  mod.rs  traits.rs
backlog/src/storage/file_storage/: mod.rs  yaml.rs
backlog/src/storage/no_sql_storage/: mod.rs
backlog/src/storage/sql_storage/: mod.rs
backlog_cli/: Cargo.toml
backlog_cli/src/: backlog_app.rs  cli.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/app/contracts/: create_project_command_handler.rs  get_all_project_command_handler.rs  get_one_project_command_handler.rs  mod.rs  update_project_command_handler.rs
core/src/app/services/: create_project_service.rs  get_all_project_service.rs  get_one_project_service.rs  mod.rs  update_project_service.rs
core/src/builder/: app_service_builder.rs  mod.rs
core/src/domain/: errors.rs  mod.rs
core/src/domain/entities/: project.rs
core/src/domain/models/: project.rs
core/src/domain/services/: create_project_service.rs  get_all_project_service.rs  get_one_project_service.rs  mod.rs  update_project_service.rs
core/src/domain/usecases/: create_project_use_case.rs  get_all_project_use_case.rs  get_one_project_use_case.rs  list_project_use_case.rs  mod.rs  update_project_use_case.rs
core/src/entities/: project.rs
core/src/interfaces/ports/: mod.rs
core/src/interfaces/ports/driven/: create_project_repository.rs  mod.rs
core/src/interfaces/ports/driving/: create_project_service.rs
core/src/interfaces/repositories/projects/: create_post.rs
core/src/interfaces/use_cases/: create_project_use_case.rs
core/src/interfaces/use_cases/projects/: create_project.rs
core/src/models/: dto.rs  errors.rs  mod.rs
core/src/repositories/: create_project_repository.rs  get_all_project_repository.rs  get_one_project_repository.rs  mod.rs  update_project_repository.rs
core/src/services/: create_project_service.rs
core/src/use_cases/: mod.rs
core/src/use_cases/projects/: create_project.rs  mod.rs
crates/backlog/: Cargo.toml
crates/backlog/src/: app.rs  main.rs
crates/ticketing/: Cargo.toml
crates/ticketing/src/: error.rs  lib.rs  model.rs  store.rs
http_server/: Cargo.toml
http_server/src/interactor/: handle_login.rs
infra/: Cargo.toml
infra/.sqlx/: query-404181a0b2dc74674a4a674c74916a94f71d3084fb291905f12595c739855536.json  query-7d1f770f53216285535b9b8ea9369ca272eca3ec886d2e6ff0b4457a7f9af765.json
infra/src/: lib.rs
infra/src/app/: mod.rs
infra/src/repositories/: atomic.rs  create_project_repository.rs  get_all_project_repository.rs  get_one_project_repository.rs  mod.rs  project_repository.rs  sqlite_connection_pool.rs  update_project_repository.rs
migrations/: 20240623012929_projects.sql
src/: app.rs  lib.rs  main.rs
src/domain/: mod.rs  ticketing.rs
