[workspace]
resolver = "2"
members = ["backlog", "backlog_cli"]
default-members = ["backlog_cli"]

[workspace.package]
description = "A project management tool to track projects, boards, issues, workflows"
readme = "README.md"
homepage = "https://backlog.github.io"
repository = "https://github.com/sbeardsley/backlog"
keywords = ["agile", "issues", "tracking"]
rust-version = "1.78"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["github.com/sbeardsley"]
include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]
