[workspace]
resolver = "2"
members = ["backlog", "core", "http_server", "infra"]
default-members = ["backlog"]

[workspace.package]
description = "A project management tool to track projects, boards, issues, workflows"
readme = "README.md"
homepage = "https://backlog.github.io"
repository = "https://github.com/sbeardsley/backlog"
keywords = ["agile", "issues", "tracking"]
rust-version = "1.78"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["github.com/sbeardsley"]
include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]

[workspace.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
db_setup = "cd infra && sqlx database setup --source=../migrations"
db_migrate = "cd infra && sqlx migrate run --source../migrations"
db_prepare = "cd infra && cargo sqlx prepare"
