[package]
name = "backlog"
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true


include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]

[dependencies]
chrono = { optional = true, version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
serde = { optional = true, version = "1.0.203", features = ["derive"] }


[features]
default = ["extras"]
extras = ["chrono", "serde"]
chrono = ["dep:chrono"]
serde = ["dep:serde"]
