[package]
name = "backlog"
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true


include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]

[dependencies]
anyhow = "1.0.86"
chrono = { optional = true, version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
expanduser = "1.2.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = { version = "0.9.34", optional = true }
thiserror = "1.0.61"
toml = "0.8.14"


[features]
default = ["extras"]
extras = ["chrono", "yaml"]
chrono = ["dep:chrono"]
yaml = ["dep:serde_yaml"]
