[package]
name = "backlog"
edition = "2021"
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
include.workspace = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
core = { path = "../core" }
infra = { path = "../infra" }
tokio = { version = "1.38.0", features = ["full"] }
