[package]
name = "backlog_cli"
edition = "2021"
description = "Provides the CLI for the Backlog crate"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
keywords = ["backlog", "cli"]
include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]

[dependencies]
clap = { features = ["derive"] }

[dependencies.backlog]
path = "../backlog"
default-features = true
